data/derived/comb/progs/unify/prog4389.ml.out
Characters 37-38:
  if l1 < l2 then 0;;
                  ^
Error: This expression has type int but an expression was expected of type
         unit
